--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        env: # Or as an environment variable
+          SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        run: echo $SSH_KEY
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
