--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        env: # Or as an environment variable
+        env:
           SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        run: echo $SSH_KEY
+        run: echo $SSH_KEY | wc
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
