--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,16 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Test that the ssh key I uploaded is in the right format
         env:
           SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: echo $SSH_KEY | base64 -d | wc
+
+      - name: Check that the correct files are in working directory
+        run: |
+          echo '-----> Project directory'
+          pwd
+          ls -al
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
