--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,11 @@ jobs:
       # Runs a single command using the runners shell
       - name: Test that the ssh key I uploaded is in the right format
         env:
-          SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        run: echo $SSH_KEY | base64 -d | wc
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SSH_CONFIG: ${{ secrets.SSH_CONFIG }}
+        run: |
+          echo $SSH_PRIVATE_KEY | base64 -d | wc
+          echo $SSH_CONFIG | base64 -d 
 
       - name: Check that the correct files are in working directory
         run: |
@@ -38,7 +41,24 @@ jobs:
           ls -al
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Deploy dash app to DE
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          SSH_CONFIG: ${{ secrets.SSH_CONFIG }}
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          echo '-----> Creating ssh key'
+          echo "$SSH_PRIVATE_KEY" | base64 --decode -i > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa # permissioning
+          eval "$(ssh-agent -s)" # setting ssh environment variable
+
+          echo '-----> Adding keys to ssh-agent'
+          ssh-add ~/.ssh/id_rsa
+
+          echo '-----> Creating ssh config'
+          echo "$SSH_CONFIG" | base64 --decode -i > ~/.ssh/config
+
+          echo '-----> Adding git remote'
+          git config remote.plotly.url >&- || git remote add plotly dokku@<your-dash-enterprise-hostname>:<your-dash-app-name>
+
+          echo '-----> Deploying app'
+          git push plotly HEAD:master
