--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,7 @@ jobs:
           SSH_CONFIG: ${{ secrets.SSH_CONFIG }}
         run: |
           echo '-----> Creating ssh key'
+          mkdir -p ~/.ssh
           echo "$SSH_PRIVATE_KEY" | base64 --decode -i > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa # permissioning
           eval "$(ssh-agent -s)" # setting ssh environment variable
@@ -58,7 +59,7 @@ jobs:
           echo "$SSH_CONFIG" | base64 --decode -i > ~/.ssh/config
 
           echo '-----> Adding git remote'
-          git config remote.plotly.url >&- || git remote add plotly dokku@<your-dash-enterprise-hostname>:<your-dash-app-name>
+          git config remote.plotly.url >&- || git remote add plotly dokku@dash-customer-success:cicd-michael
 
           echo '-----> Deploying app'
           git push plotly HEAD:master
