--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,18 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+  pull_request_ci:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: print github event name
+        env:
+          EVENT_NAME = ${{ github.event_name }}
+        run: echo $EVENT_NAME
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'DOG' }}
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
