--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,11 @@ jobs:
       - uses: actions/checkout@v3
       - name: print github event name
         env:
-          EVENT_NAME = ${{ github.event_name }}
-        run: echo $EVENT_NAME
+          EVENT_NAME: ${{ github.event_name }}
+          BRANCH_NAME: ${{ github.ref }}
+        run: |
+          echo $EVENT_NAME
+          echo $BRANCH_NAME
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
