--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: print github event name
+      - name: print repo/vcs details
         env:
           EVENT_NAME: ${{ github.event_name }}
-          BRANCH_NAME: ${{ github.ref }}
+          BRANCH_NAME: ${{ github.ref_name }}
         run: |
           echo $EVENT_NAME
           echo $BRANCH_NAME
