--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'DOG' }}
+    if: github.event_name == 'DOG'
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
